--- a/Kursach/Kursach.vcxproj.filters
+++ b/Kursach/Kursach.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="Shishov_37var.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
